<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clothing.ClothingCategoryActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTshirts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAllCaps="true"
        android:text="@string/t_shirts"
        android:layout_weight="1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvFormals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/formals"
        android:textAllCaps="true"
        android:layout_weight="1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvUnderWear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bottom_wear"
        android:layout_weight="1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvShoes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/shoes"
        android:gravity="center"
        android:layout_weight="1"/>

</LinearLayout>